deploy/k8s/overlays/production/ingress-openedx-lms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx-lms
  namespace: mereka-lms
  labels:
    app.kubernetes.io/name: openedx-lms
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: preview.academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: skillourfuture.academy.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: academy.biji-biji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: discovery.academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: ecommerce.academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: notes.academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: credentials.academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
  tls:
    - hosts:
        - academyv2.mereka.io
        - preview.academyv2.mereka.io
        - skillourfuture.academy.mereka.io
        - academy.biji-biji.com
        - discovery.academyv2.mereka.io
        - ecommerce.academyv2.mereka.io
        - notes.academyv2.mereka.io
        - credentials.academyv2.mereka.io
      secretName: openedx-lms-tls
