deploy/k8s/overlays/production/ingress-openedx-mfe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx-mfe
  namespace: mereka-lms
  labels:
    app.kubernetes.io/name: openedx-mfe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: apps.academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: apps.academy.biji-biji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
  tls:
    - hosts:
        - apps.academyv2.mereka.io
        - apps.academy.biji-biji.com
      secretName: openedx-mfe-tls
