deploy/k8s/overlays/production/ingress-openedx-studio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx-studio
  namespace: mereka-lms
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: studio.academyv2.mereka.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: studio.academy.biji-biji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
  tls:
    - hosts:
        - studio.academyv2.mereka.io
        - studio.academy.biji-biji.com
      secretName: openedx-studio-tls
